--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+  background-image: url(/public/background.jpg);
+  background-size: cover
+  
+}
